# yt-videos-to-blog-creator-ai-agents

./: .gitignore  DEPLOYMENT.md  IMPLEMENTATION.md  LICENSE  QUICKSTART.md  README.md  RESUME.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
backend/: Dockerfile  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_migration.py  002_add_missing_columns.py  003_add_video_id.py
backend/app/: __init__.py  config.py  main.py
backend/app/api/: __init__.py  email.py  generate.py  health.py  status.py
backend/app/db/: __init__.py  crud.py  session.py
backend/app/models/: __init__.py  database.py  schemas.py
backend/app/services/: __init__.py  email.py  embeddings.py  llm_pipeline.py  youtube.py
backend/app/workers/: __init__.py  celery_app.py  tasks.py
backend/tests/: __init__.py  conftest.py  test_api.py  test_database.py  test_services.py
frontend/: Dockerfile  index.html  package-lock.json  package.json  vitest.config.ts
frontend/src/: App.tsx
frontend/src/api/: client.ts
frontend/src/components/: BlogPost.tsx  GeneratorForm.tsx
frontend/src/tests/: App.test.tsx  GeneratorForm.test.tsx
